parser.output
Terminals unused in grammar

   TDOT


Stato 54 11 conflitti shift/riduzione
Stato 59 7 conflitti shift/riduzione
Stato 60 7 conflitti shift/riduzione
Stato 61 7 conflitti shift/riduzione
Stato 62 7 conflitti shift/riduzione
Stato 63 11 conflitti shift/riduzione
Stato 64 11 conflitti shift/riduzione


Grammatica

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_decl TSEMI
    5     | func_decl
    6     | if_stmt
    7     | while_stmt
    8     | for_stmt
    9     | return_stmt TSEMI
   10     | expr TSEMI

   11 block: TLBRACE stmts TRBRACE
   12      | TLBRACE TRBRACE

   13 if_stmt: TIF TLPAREN expr TRPAREN block
   14        | TIF TLPAREN expr TRPAREN block TELSE block

   15 while_stmt: TWHILE TLPAREN expr TRPAREN block

   16 return_stmt: TRETURN expr

   17 for_stmt: TFOR TLPAREN expr TSEMI expr TSEMI expr TRPAREN block

   18 var_decl: ident ident
   19         | ident ident TEQUAL expr

   20 func_decl: ident ident TLPAREN func_decl_args TRPAREN block

   21 func_decl_args: %empty
   22               | var_decl
   23               | func_decl_args TCOMMA var_decl

   24 ident: TIDENTIFIER

   25 numeric: TINTEGER
   26        | TDOUBLE

   27 string: TSTRING

   28 expr: ident TEQUAL expr
   29     | term
   30     | expr comparison expr
   31     | expr TPLUS expr
   32     | expr TMINUS expr
   33     | expr TMUL expr
   34     | expr TDIV expr
   35     | expr TMOD expr
   36     | TLPAREN expr TRPAREN

   37 term: ident TLPAREN call_args TRPAREN
   38     | ident
   39     | numeric
   40     | string

   41 call_args: %empty
   42          | expr
   43          | call_args TCOMMA expr

   44 comparison: TCEQ
   45           | TCNE
   46           | TCLT
   47           | TCLE
   48           | TCGT
   49           | TCGE


Simboli terminali e regole in cui appaiono

$end (0) 0
error (256)
TIDENTIFIER (258) 24
TINTEGER (259) 25
TDOUBLE (260) 26
TSTRING (261) 27
TCEQ (262) 44
TCNE (263) 45
TCLT (264) 46
TCLE (265) 47
TCGT (266) 48
TCGE (267) 49
TEQUAL (268) 19 28
TLPAREN (269) 13 14 15 17 20 36 37
TRPAREN (270) 13 14 15 17 20 36 37
TLBRACE (271) 11 12
TRBRACE (272) 11 12
TCOMMA (273) 23 43
TDOT (274)
TPLUS (275) 31
TMINUS (276) 32
TMUL (277) 33
TDIV (278) 34
TMOD (279) 35
TSEMI (280) 4 9 10 17
TIF (281) 13 14
TELSE (282) 14
TWHILE (283) 15
TFOR (284) 17
TRETURN (285) 16


Simboli nonterminali e regole in cui appaiono

$accept (31)
    nel primo membro: 0
program (32)
    nel primo membro: 1, nel secondo membro: 0
stmts (33)
    nel primo membro: 2 3, nel secondo membro: 1 3 11
stmt (34)
    nel primo membro: 4 5 6 7 8 9 10, nel secondo membro: 2 3
block (35)
    nel primo membro: 11 12, nel secondo membro: 13 14 15 17 20
if_stmt (36)
    nel primo membro: 13 14, nel secondo membro: 6
while_stmt (37)
    nel primo membro: 15, nel secondo membro: 7
return_stmt (38)
    nel primo membro: 16, nel secondo membro: 9
for_stmt (39)
    nel primo membro: 17, nel secondo membro: 8
var_decl (40)
    nel primo membro: 18 19, nel secondo membro: 4 22 23
func_decl (41)
    nel primo membro: 20, nel secondo membro: 5
func_decl_args (42)
    nel primo membro: 21 22 23, nel secondo membro: 20 23
ident (43)
    nel primo membro: 24, nel secondo membro: 18 19 20 28 37 38
numeric (44)
    nel primo membro: 25 26, nel secondo membro: 39
string (45)
    nel primo membro: 27, nel secondo membro: 40
expr (46)
    nel primo membro: 28 29 30 31 32 33 34 35 36, nel secondo membro:
    10 13 14 15 16 17 19 28 30 31 32 33 34 35 36 42 43
term (47)
    nel primo membro: 37 38 39 40, nel secondo membro: 29
call_args (48)
    nel primo membro: 41 42 43, nel secondo membro: 37 43
comparison (49)
    nel primo membro: 44 45 46 47 48 49, nel secondo membro: 30


Stato 0

    0 $accept: . program $end

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5
    TIF          shift e prosecuzione allo stato 6
    TWHILE       shift e prosecuzione allo stato 7
    TFOR         shift e prosecuzione allo stato 8
    TRETURN      shift e prosecuzione allo stato 9

    program      prosecuzione allo stato 10
    stmts        prosecuzione allo stato 11
    stmt         prosecuzione allo stato 12
    if_stmt      prosecuzione allo stato 13
    while_stmt   prosecuzione allo stato 14
    return_stmt  prosecuzione allo stato 15
    for_stmt     prosecuzione allo stato 16
    var_decl     prosecuzione allo stato 17
    func_decl    prosecuzione allo stato 18
    ident        prosecuzione allo stato 19
    numeric      prosecuzione allo stato 20
    string       prosecuzione allo stato 21
    expr         prosecuzione allo stato 22
    term         prosecuzione allo stato 23


Stato 1

   24 ident: TIDENTIFIER .

    $default  riduzione con la regola 24 (ident)


Stato 2

   25 numeric: TINTEGER .

    $default  riduzione con la regola 25 (numeric)


Stato 3

   26 numeric: TDOUBLE .

    $default  riduzione con la regola 26 (numeric)


Stato 4

   27 string: TSTRING .

    $default  riduzione con la regola 27 (string)


Stato 5

   36 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 25
    term     prosecuzione allo stato 23


Stato 6

   13 if_stmt: TIF . TLPAREN expr TRPAREN block
   14        | TIF . TLPAREN expr TRPAREN block TELSE block

    TLPAREN  shift e prosecuzione allo stato 26


Stato 7

   15 while_stmt: TWHILE . TLPAREN expr TRPAREN block

    TLPAREN  shift e prosecuzione allo stato 27


Stato 8

   17 for_stmt: TFOR . TLPAREN expr TSEMI expr TSEMI expr TRPAREN block

    TLPAREN  shift e prosecuzione allo stato 28


Stato 9

   16 return_stmt: TRETURN . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 29
    term     prosecuzione allo stato 23


Stato 10

    0 $accept: program . $end

    $end  shift e prosecuzione allo stato 30


Stato 11

    1 program: stmts .
    3 stmts: stmts . stmt

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5
    TIF          shift e prosecuzione allo stato 6
    TWHILE       shift e prosecuzione allo stato 7
    TFOR         shift e prosecuzione allo stato 8
    TRETURN      shift e prosecuzione allo stato 9

    $default  riduzione con la regola 1 (program)

    stmt         prosecuzione allo stato 31
    if_stmt      prosecuzione allo stato 13
    while_stmt   prosecuzione allo stato 14
    return_stmt  prosecuzione allo stato 15
    for_stmt     prosecuzione allo stato 16
    var_decl     prosecuzione allo stato 17
    func_decl    prosecuzione allo stato 18
    ident        prosecuzione allo stato 19
    numeric      prosecuzione allo stato 20
    string       prosecuzione allo stato 21
    expr         prosecuzione allo stato 22
    term         prosecuzione allo stato 23


Stato 12

    2 stmts: stmt .

    $default  riduzione con la regola 2 (stmts)


Stato 13

    6 stmt: if_stmt .

    $default  riduzione con la regola 6 (stmt)


Stato 14

    7 stmt: while_stmt .

    $default  riduzione con la regola 7 (stmt)


Stato 15

    9 stmt: return_stmt . TSEMI

    TSEMI  shift e prosecuzione allo stato 32


Stato 16

    8 stmt: for_stmt .

    $default  riduzione con la regola 8 (stmt)


Stato 17

    4 stmt: var_decl . TSEMI

    TSEMI  shift e prosecuzione allo stato 33


Stato 18

    5 stmt: func_decl .

    $default  riduzione con la regola 5 (stmt)


Stato 19

   18 var_decl: ident . ident
   19         | ident . ident TEQUAL expr
   20 func_decl: ident . ident TLPAREN func_decl_args TRPAREN block
   28 expr: ident . TEQUAL expr
   37 term: ident . TLPAREN call_args TRPAREN
   38     | ident .

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TEQUAL       shift e prosecuzione allo stato 34
    TLPAREN      shift e prosecuzione allo stato 35

    $default  riduzione con la regola 38 (term)

    ident  prosecuzione allo stato 36


Stato 20

   39 term: numeric .

    $default  riduzione con la regola 39 (term)


Stato 21

   40 term: string .

    $default  riduzione con la regola 40 (term)


Stato 22

   10 stmt: expr . TSEMI
   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ    shift e prosecuzione allo stato 37
    TCNE    shift e prosecuzione allo stato 38
    TCLT    shift e prosecuzione allo stato 39
    TCLE    shift e prosecuzione allo stato 40
    TCGT    shift e prosecuzione allo stato 41
    TCGE    shift e prosecuzione allo stato 42
    TPLUS   shift e prosecuzione allo stato 43
    TMINUS  shift e prosecuzione allo stato 44
    TMUL    shift e prosecuzione allo stato 45
    TDIV    shift e prosecuzione allo stato 46
    TMOD    shift e prosecuzione allo stato 47
    TSEMI   shift e prosecuzione allo stato 48

    comparison  prosecuzione allo stato 49


Stato 23

   29 expr: term .

    $default  riduzione con la regola 29 (expr)


Stato 24

   28 expr: ident . TEQUAL expr
   37 term: ident . TLPAREN call_args TRPAREN
   38     | ident .

    TEQUAL   shift e prosecuzione allo stato 34
    TLPAREN  shift e prosecuzione allo stato 35

    $default  riduzione con la regola 38 (term)


Stato 25

   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr
   36     | TLPAREN expr . TRPAREN

    TCEQ     shift e prosecuzione allo stato 37
    TCNE     shift e prosecuzione allo stato 38
    TCLT     shift e prosecuzione allo stato 39
    TCLE     shift e prosecuzione allo stato 40
    TCGT     shift e prosecuzione allo stato 41
    TCGE     shift e prosecuzione allo stato 42
    TRPAREN  shift e prosecuzione allo stato 50
    TPLUS    shift e prosecuzione allo stato 43
    TMINUS   shift e prosecuzione allo stato 44
    TMUL     shift e prosecuzione allo stato 45
    TDIV     shift e prosecuzione allo stato 46
    TMOD     shift e prosecuzione allo stato 47

    comparison  prosecuzione allo stato 49


Stato 26

   13 if_stmt: TIF TLPAREN . expr TRPAREN block
   14        | TIF TLPAREN . expr TRPAREN block TELSE block

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 51
    term     prosecuzione allo stato 23


Stato 27

   15 while_stmt: TWHILE TLPAREN . expr TRPAREN block

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 52
    term     prosecuzione allo stato 23


Stato 28

   17 for_stmt: TFOR TLPAREN . expr TSEMI expr TSEMI expr TRPAREN block

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 53
    term     prosecuzione allo stato 23


Stato 29

   16 return_stmt: TRETURN expr .
   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ    shift e prosecuzione allo stato 37
    TCNE    shift e prosecuzione allo stato 38
    TCLT    shift e prosecuzione allo stato 39
    TCLE    shift e prosecuzione allo stato 40
    TCGT    shift e prosecuzione allo stato 41
    TCGE    shift e prosecuzione allo stato 42
    TPLUS   shift e prosecuzione allo stato 43
    TMINUS  shift e prosecuzione allo stato 44
    TMUL    shift e prosecuzione allo stato 45
    TDIV    shift e prosecuzione allo stato 46
    TMOD    shift e prosecuzione allo stato 47

    $default  riduzione con la regola 16 (return_stmt)

    comparison  prosecuzione allo stato 49


Stato 30

    0 $accept: program $end .

    $default  accetta


Stato 31

    3 stmts: stmts stmt .

    $default  riduzione con la regola 3 (stmts)


Stato 32

    9 stmt: return_stmt TSEMI .

    $default  riduzione con la regola 9 (stmt)


Stato 33

    4 stmt: var_decl TSEMI .

    $default  riduzione con la regola 4 (stmt)


Stato 34

   28 expr: ident TEQUAL . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 54
    term     prosecuzione allo stato 23


Stato 35

   37 term: ident TLPAREN . call_args TRPAREN

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    $default  riduzione con la regola 41 (call_args)

    ident      prosecuzione allo stato 24
    numeric    prosecuzione allo stato 20
    string     prosecuzione allo stato 21
    expr       prosecuzione allo stato 55
    term       prosecuzione allo stato 23
    call_args  prosecuzione allo stato 56


Stato 36

   18 var_decl: ident ident .
   19         | ident ident . TEQUAL expr
   20 func_decl: ident ident . TLPAREN func_decl_args TRPAREN block

    TEQUAL   shift e prosecuzione allo stato 57
    TLPAREN  shift e prosecuzione allo stato 58

    $default  riduzione con la regola 18 (var_decl)


Stato 37

   44 comparison: TCEQ .

    $default  riduzione con la regola 44 (comparison)


Stato 38

   45 comparison: TCNE .

    $default  riduzione con la regola 45 (comparison)


Stato 39

   46 comparison: TCLT .

    $default  riduzione con la regola 46 (comparison)


Stato 40

   47 comparison: TCLE .

    $default  riduzione con la regola 47 (comparison)


Stato 41

   48 comparison: TCGT .

    $default  riduzione con la regola 48 (comparison)


Stato 42

   49 comparison: TCGE .

    $default  riduzione con la regola 49 (comparison)


Stato 43

   31 expr: expr TPLUS . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 59
    term     prosecuzione allo stato 23


Stato 44

   32 expr: expr TMINUS . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 60
    term     prosecuzione allo stato 23


Stato 45

   33 expr: expr TMUL . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 61
    term     prosecuzione allo stato 23


Stato 46

   34 expr: expr TDIV . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 62
    term     prosecuzione allo stato 23


Stato 47

   35 expr: expr TMOD . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 63
    term     prosecuzione allo stato 23


Stato 48

   10 stmt: expr TSEMI .

    $default  riduzione con la regola 10 (stmt)


Stato 49

   30 expr: expr comparison . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 64
    term     prosecuzione allo stato 23


Stato 50

   36 expr: TLPAREN expr TRPAREN .

    $default  riduzione con la regola 36 (expr)


Stato 51

   13 if_stmt: TIF TLPAREN expr . TRPAREN block
   14        | TIF TLPAREN expr . TRPAREN block TELSE block
   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ     shift e prosecuzione allo stato 37
    TCNE     shift e prosecuzione allo stato 38
    TCLT     shift e prosecuzione allo stato 39
    TCLE     shift e prosecuzione allo stato 40
    TCGT     shift e prosecuzione allo stato 41
    TCGE     shift e prosecuzione allo stato 42
    TRPAREN  shift e prosecuzione allo stato 65
    TPLUS    shift e prosecuzione allo stato 43
    TMINUS   shift e prosecuzione allo stato 44
    TMUL     shift e prosecuzione allo stato 45
    TDIV     shift e prosecuzione allo stato 46
    TMOD     shift e prosecuzione allo stato 47

    comparison  prosecuzione allo stato 49


Stato 52

   15 while_stmt: TWHILE TLPAREN expr . TRPAREN block
   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ     shift e prosecuzione allo stato 37
    TCNE     shift e prosecuzione allo stato 38
    TCLT     shift e prosecuzione allo stato 39
    TCLE     shift e prosecuzione allo stato 40
    TCGT     shift e prosecuzione allo stato 41
    TCGE     shift e prosecuzione allo stato 42
    TRPAREN  shift e prosecuzione allo stato 66
    TPLUS    shift e prosecuzione allo stato 43
    TMINUS   shift e prosecuzione allo stato 44
    TMUL     shift e prosecuzione allo stato 45
    TDIV     shift e prosecuzione allo stato 46
    TMOD     shift e prosecuzione allo stato 47

    comparison  prosecuzione allo stato 49


Stato 53

   17 for_stmt: TFOR TLPAREN expr . TSEMI expr TSEMI expr TRPAREN block
   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ    shift e prosecuzione allo stato 37
    TCNE    shift e prosecuzione allo stato 38
    TCLT    shift e prosecuzione allo stato 39
    TCLE    shift e prosecuzione allo stato 40
    TCGT    shift e prosecuzione allo stato 41
    TCGE    shift e prosecuzione allo stato 42
    TPLUS   shift e prosecuzione allo stato 43
    TMINUS  shift e prosecuzione allo stato 44
    TMUL    shift e prosecuzione allo stato 45
    TDIV    shift e prosecuzione allo stato 46
    TMOD    shift e prosecuzione allo stato 47
    TSEMI   shift e prosecuzione allo stato 67

    comparison  prosecuzione allo stato 49


Stato 54

   28 expr: ident TEQUAL expr .
   30     | expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ    shift e prosecuzione allo stato 37
    TCNE    shift e prosecuzione allo stato 38
    TCLT    shift e prosecuzione allo stato 39
    TCLE    shift e prosecuzione allo stato 40
    TCGT    shift e prosecuzione allo stato 41
    TCGE    shift e prosecuzione allo stato 42
    TPLUS   shift e prosecuzione allo stato 43
    TMINUS  shift e prosecuzione allo stato 44
    TMUL    shift e prosecuzione allo stato 45
    TDIV    shift e prosecuzione allo stato 46
    TMOD    shift e prosecuzione allo stato 47

    TCEQ      [riduzione con la regola 28 (expr)]
    TCNE      [riduzione con la regola 28 (expr)]
    TCLT      [riduzione con la regola 28 (expr)]
    TCLE      [riduzione con la regola 28 (expr)]
    TCGT      [riduzione con la regola 28 (expr)]
    TCGE      [riduzione con la regola 28 (expr)]
    TPLUS     [riduzione con la regola 28 (expr)]
    TMINUS    [riduzione con la regola 28 (expr)]
    TMUL      [riduzione con la regola 28 (expr)]
    TDIV      [riduzione con la regola 28 (expr)]
    TMOD      [riduzione con la regola 28 (expr)]
    $default  riduzione con la regola 28 (expr)

    comparison  prosecuzione allo stato 49


Stato 55

   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr
   42 call_args: expr .

    TCEQ    shift e prosecuzione allo stato 37
    TCNE    shift e prosecuzione allo stato 38
    TCLT    shift e prosecuzione allo stato 39
    TCLE    shift e prosecuzione allo stato 40
    TCGT    shift e prosecuzione allo stato 41
    TCGE    shift e prosecuzione allo stato 42
    TPLUS   shift e prosecuzione allo stato 43
    TMINUS  shift e prosecuzione allo stato 44
    TMUL    shift e prosecuzione allo stato 45
    TDIV    shift e prosecuzione allo stato 46
    TMOD    shift e prosecuzione allo stato 47

    $default  riduzione con la regola 42 (call_args)

    comparison  prosecuzione allo stato 49


Stato 56

   37 term: ident TLPAREN call_args . TRPAREN
   43 call_args: call_args . TCOMMA expr

    TRPAREN  shift e prosecuzione allo stato 68
    TCOMMA   shift e prosecuzione allo stato 69


Stato 57

   19 var_decl: ident ident TEQUAL . expr

    TIDENTIFIER  shift e prosecuzione allo stato 1
    TINTEGER     shift e prosecuzione allo stato 2
    TDOUBLE      shift e prosecuzione allo stato 3
    TSTRING      shift e prosecuzione allo stato 4
    TLPAREN      shift e prosecuzione allo stato 5

    ident    prosecuzione allo stato 24
    numeric  prosecuzione allo stato 20
    string   prosecuzione allo stato 21
    expr     prosecuzione allo stato 70
    term     prosecuzione allo stato 23


Stato 58

   20 func_decl: ident ident TLPAREN . func_decl_args TRPAREN block

    TIDENTIFIER  shift e prosecuzione allo stato 1

    $default  riduzione con la regola 21 (func_decl_args)

    var_decl        prosecuzione allo stato 71
    func_decl_args  prosecuzione allo stato 72
    ident           prosecuzione allo stato 73


Stato 59

   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   31     | expr TPLUS expr .
   32     | expr . TMINUS expr
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ  shift e prosecuzione allo stato 37
    TCNE  shift e prosecuzione allo stato 38
    TCLT  shift e prosecuzione allo stato 39
    TCLE  shift e prosecuzione allo stato 40
    TCGT  shift e prosecuzione allo stato 41
    TCGE  shift e prosecuzione allo stato 42
    TMUL  shift e prosecuzione allo stato 45
    TDIV  shift e prosecuzione allo stato 46
    TMOD  shift e prosecuzione allo stato 47

    TCEQ      [riduzione con la regola 31 (expr)]
    TCNE      [riduzione con la regola 31 (expr)]
    TCLT      [riduzione con la regola 31 (expr)]
    TCLE      [riduzione con la regola 31 (expr)]
    TCGT      [riduzione con la regola 31 (expr)]
    TCGE      [riduzione con la regola 31 (expr)]
    TMOD      [riduzione con la regola 31 (expr)]
    $default  riduzione con la regola 31 (expr)

    comparison  prosecuzione allo stato 49


Stato 60

   30 expr: expr . comparison expr
   31     | expr . TPLUS expr
   32     | expr . TMINUS expr
   32     | expr TMINUS expr .
   33     | expr . TMUL expr
   34     | expr . TDIV expr
   35     | expr . TMOD expr

    TCEQ  shift e prosecuzione allo stato 37
    TCNE  shift e prosecuzione allo stato 38
    TCLT  shift e prosecuzione allo stato 39
    TCLE  shift e prosecuzione allo stato 40
    TCGT  shift e prosecuzione allo stato 41
    TCGE  shift e prosecuzione allo stato 42
    TMUL  shift e prosecuzione allo stato 45
    TDIV  shift e prosecuzione allo stato 46
    TMOD  shift e prosecuzione allo stato 47
